[metadata]
name = docinit
description = Bootstrap your Sphinx documentation and automatically create API reference
long_description = file: README.rst
keywords = doc, autodoc, sphinx, apidoc
license = MIT
home-page = https://github.com/timeflux/docinit
author = Pierre Clisson
author-email = contact@timeflux.io
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Documentation :: Sphinx
project_urls =
    Source Code = https://github.com/timeflux/docinit
    Bug Tracker = https://github.com/timeflux/docinit/issues

[options]
packages = find:
include_package_data = True

[options.entry_points]
distutils.commands =
    docinit = docinit.docinit:DocInitCommand

[pbr]
skip_git_sdist = 1
skip_changelog = 1
skip_authors = 1

[build_sphinx]
warning-is-error = 1

[docinit]
name = DocInit
autoapi_ignore =
    *skeleton*
autoapi_generate_api_docs = 0
