[metadata]
name = docinit
description = Bootstrap your Sphinx documentation
long_description = file: README.rst
keywords = doc, autodoc, sphinx, apidoc
license = MIT
home-page = https://github.com/timeflux/docinit
author = Pierre Clisson
author-email = contact@timeflux.io
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Documentation :: Sphinx
project_urls =
    Source Code = https://github.com/mesca/docinit
    Bug Tracker = https://github.com/mesca/docinit/issues

[options]
packages = find:
include_package_data = True
install_requires =
    setuptools>=46
    setuptools-scm>=3.5
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    sphinx-autoapi>=1.3

[options.entry_points]
distutils.commands =
    docinit = docinit.docinit:DocInitCommand

[build_sphinx]
warning-is-error = True

[docinit]
name = DocInit
autoapi_ignore =
    *skeleton*
autoapi_generate_api_docs = False
